--- a/browser/index.html
+++ b/browser/index.html
@@ -59,21 +59,21 @@
             </div>
 
             <!-- Various Albumsssssss -->
-            <!-- <div ng-show="true" ng-controller="AlbumsCtrl">
+            <div  ng-controller="AlbumsCtrl" ng-show="false">
                 <h3>Albums</h3>
-                <div class="row" ng-repeat= "album in albums">
-                    <div class="col-xs-4">
+                <div class="row">
+                    <div class="col-xs-4" ng-repeat= "album in albums track by $index">
                         <a class="thumbnail" href="#">
                             <img ng-src="{{album.imageUrl}}">
                             <div class="caption">
                                 <h5>
             <span>{{album.name}}</span>
           </h5>
-                                <small>{{album.songs.length}}</small>
+                                <small># of Songs {{album.songs.length}}</small>
                             </div>
                         </a>
                     </div>
-                    <div class="col-xs-4">
+                    <!-- <div class="col-xs-4">
                         <a class="thumbnail" href="#">
                             <img src="http://placeholdit.imgix.net/~text?txtsize=33&txt=ALBUMtwoIMAGE&w=300&h=300">
                             <div class="caption">
@@ -83,19 +83,20 @@
                                 <small>NUMBER OF SONGS HERE songs</small>
                             </div>
                         </a>
-                    </div>
+                    </div> -->
                 </div>
-            </div> -->
+            </div>
         </div>
 
         <footer>
-            <div ng-show="currentSong" ng-controller="PlayerCtrl">
+            <div ng-show="true" ng-controller="PlayerCtrl">
                 <div class="pull-left">
                     <button class="btn btn-default" ng-click="prev()">
                         <span class="glyphicon glyphicon-step-backward"></span>
                     </button>
                     <button class="btn btn-default" ng-click="toggle(currentSong)">
-                        <span class="glyphicon" ng-class="{'glyphicon-pause': playing, 'glyphicon-play': !playing}"></span>
+                        <span class="glyphicon" ng-class="{'glyphicon-pause': 
+                        , 'glyphicon-play': !playing}"></span>
                     </button>
                     <button class="btn btn-default" ng-click="next()">
                         <span class="glyphicon glyphicon-step-forward"></span>
